Reorganized ccs file

--- a/refactor2/styles.css
+++ b/refactor2/styles.css
@@ -12,7 +12,22 @@ body {
     align-items: stretch;
 
 }
+#content_lc, #content_fc, #content_ba, #content_ea, #content_un {
+    min-height: 100vh;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 3%;
+}
 
+.full-size {
+    position: relative;
+    min-height: 90vh;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;  
+    
+}
 
 
 header, footer {
@@ -35,24 +50,6 @@ footer {
     height: 50vh;
 }
 
-#content_lc, #content_fc, #content_ba, #content_ea, #content_un {
-    min-height: 100vh;
-    box-sizing: border-box;
-    margin: 0;
-    padding: 3%;
-}
-
-#content_lc { 
-    background: linear-gradient(152deg, rgba(227, 227, 227, 1) 0%, rgba(252, 252, 252, 1) 100%);
-    box-shadow: inset 0 20px 20px -10px rgba(0, 0, 0, 0.2);
-}
-#content_fc {    background: linear-gradient(208deg, rgba(252, 252, 252, 1) 0%, rgba(227, 227, 227, 1) 100%); }
-/* #content_fc {    background: rgb(255,106,0);background: linear-gradient(220deg, rgba(255,106,0,1) 0%, rgba(218,117,0,1) 100%); } */
-#content_ba { background-color: lightpink; }
-#content_ea { background-color: lightyellow; }
-#content_un { background-color: lightgray; }
-
-
 
 .full-size {
     position: relative;
@@ -62,8 +59,8 @@ footer {
     align-items: center;
     justify-content: center;
 
-   
-    
+
+
 }
 
 #content_lc .full-size {
@@ -398,23 +395,6 @@ footer {
     50%{background-position:100% 50%}
     100%{background-position:0% 50%}
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
