--- a/refactor2/styles.css
+++ b/refactor2/styles.css
@@ -30,6 +30,8 @@ body {
 }
 
 
+/* Header-------------------------------------------------------- */
+
 header, footer {
     box-sizing: border-box;
 }
@@ -42,6 +44,128 @@ header {
     padding: 3%;
 }
 
+.grid-container {
+    display: contents;
+}
+
+.h-grid-item1 {
+    grid-column: 1 / 2;
+    text-align: left;
+    font-size: 4.5vw; 
+    font-family: "Host Grotesk", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 300;
+    letter-spacing: 5px;
+    align-self: flex-end;
+}
+
+.h-grid-item2 {
+    grid-column: 2 / 3;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.h-grid-item3 {
+    grid-column: 1 / 3;
+    display: flex;
+    justify-content: center;
+    align-items: end;
+    font-family: "Afacad Flux", sans-serif; 
+    font-size: 20px;
+    padding-bottom: 20px;
+}
+
+
+.head_video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.big-heading {
+    font-size: 8vw; 
+    font-weight: 800;
+}
+
+.header-nav {
+    display: flex;
+    gap: 10px;
+    width: 100%; 
+    justify-content: space-between; 
+    padding: 0; 
+    
+}
+
+.header-nav a {
+    color: white;
+    text-decoration: none;
+    background-color: rgba(0, 0, 0, 0);
+    border-radius: 5px;
+    position: relative; 
+}
+
+.header-nav a:hover {
+    background-color: rgba(0, 0, 0, 0);
+    
+}
+
+.header-nav a::after {
+    content: '';
+    display: block;
+    width: 0;
+    height: 10px;
+    background: linear-gradient(270deg, #0dffc0, #0dff21, #d9ff0d, #ffcf0d, #ff840d, #7d0dff, #ff0d56);
+    background-size: 1400% 1400%;
+    -webkit-animation: AnimationGradient 20s ease infinite;
+    -moz-animation: AnimationGradient 20s ease infinite;
+    animation: AnimationGradient 20s ease infinite;
+    transition: width 0.5s ease-in;
+    border-radius: 20px;
+    margin-top: 5px;
+    position: absolute;
+    bottom: -15px; 
+    left: 0;
+}
+
+.header-nav a:hover::after {
+    width: 100%;
+}
+
+.header-nav a:nth-child(1),
+.header-nav a:nth-child(2) {
+    text-align: left;
+}
+
+.header-nav a:nth-child(3) {
+    text-align: center;
+}
+
+.header-nav a:nth-child(4),
+.header-nav a:nth-child(5) {
+    text-align: right;
+}
+
+
+
+.rect-anim {
+    display: block; 
+    width: 0;
+    height: 10px; 
+    color: white; 
+    transition: width 0.5s ease-in; 
+    border-radius: 20px;
+    margin-top: 5px; 
+    position: relative; 
+    z-index: 1; 
+}
+
+.header-nav a[href="#content_lc"]:hover .rect-anim {
+    width: 100%;
+}
+
+
+/* Footer-------------------------------------------------------- */
 footer {
     background-color: #333;
     color: #fff;
@@ -51,24 +175,17 @@ footer {
 }
 
 
-.full-size {
-    position: relative;
-    min-height: 100vh;
-    overflow: hidden;
-    display: flex;
-    align-items: center;
-    justify-content: center;
 
+/* Life-Cycle Content_lc --------------------------------------- */
 
-
-}
-
-#content_lc .full-size {
+#content_lc .full-size { 
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr; 
     overflow: hidden; 
 }
+
+
 
 .lc-grid-container {
     display: grid;
@@ -130,7 +247,7 @@ footer {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: 1fr;
-    gap: 20px; /* Change this line to set a fixed gap */
+    gap: 20px; 
     max-width: 100%;
 }
 
@@ -217,7 +334,7 @@ footer {
     top: 0;
     left: 0;
     width: 100%;
-    min-height: 100vh;
+    min-height: 100%;
     opacity: 0; 
     transition: opacity 2s ease-in; 
     
@@ -228,48 +345,7 @@ footer {
 
 
 
-.grid-container {
-    display: contents;
-}
 
-.h-grid-item1 {
-    grid-column: 1 / 2;
-    text-align: left;
-    font-size: 4.5vw; 
-    font-family: "Host Grotesk", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 300;
-    letter-spacing: 5px;
-    align-self: flex-end;
-}
-
-.h-grid-item2 {
-    grid-column: 2 / 3;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.h-grid-item3 {
-    grid-column: 1 / 3;
-    display: flex;
-    justify-content: center;
-    align-items: end;
-    font-family: "Afacad Flux", sans-serif; 
-    font-size: 20px;
-    padding-bottom: 20px;
-}
-
-
-
-
-
-
-.head_video {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
 
 
 
@@ -285,89 +361,21 @@ footer {
     opacity: 1; 
 }
 
-.big-heading {
-    font-size: 8vw; 
-    font-weight: 800;
+
+
+
+#content_fc .full-size {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(4, 1fr);
+    justify-items: center;
+    align-items: center;
 }
 
-.header-nav {
-    display: flex;
-    gap: 10px;
-    width: 100%; 
-    justify-content: space-between; 
-    padding: 0; 
-    
-}
-
-.header-nav a {
-    color: white;
-    text-decoration: none;
-    background-color: rgba(0, 0, 0, 0);
-    border-radius: 5px;
-    position: relative; 
-}
-
-.header-nav a:hover {
-    background-color: rgba(0, 0, 0, 0);
-    
-}
-
-.header-nav a::after {
-    content: '';
-    display: block;
-    width: 0;
-    height: 10px;
-    background: linear-gradient(270deg, #0dffc0, #0dff21, #d9ff0d, #ffcf0d, #ff840d, #7d0dff, #ff0d56);
-    background-size: 1400% 1400%;
-    -webkit-animation: AnimationGradient 20s ease infinite;
-    -moz-animation: AnimationGradient 20s ease infinite;
-    animation: AnimationGradient 20s ease infinite;
-    transition: width 0.5s ease-in;
-    border-radius: 20px;
-    margin-top: 5px;
-    position: absolute;
-    bottom: -15px; 
-    left: 0;
-}
-
-.header-nav a:hover::after {
+.fc-grid-item{
+    border: 1px solid black;
     width: 100%;
-}
-
-.header-nav a:nth-child(1),
-.header-nav a:nth-child(2) {
-    text-align: left;
-}
-
-.header-nav a:nth-child(3) {
-    text-align: center;
-}
-
-.header-nav a:nth-child(4),
-.header-nav a:nth-child(5) {
-    text-align: right;
-}
-
-
-
-.rect-anim {
-    display: block; 
-    width: 0;
-    height: 10px; 
-    color: white; 
-    transition: width 0.5s ease-in; 
-    border-radius: 20px;
-    margin-top: 5px; 
-    position: relative; 
-    z-index: 1; 
-}
-
-.header-nav a[href="#content_lc"]:hover .rect-anim {
-    width: 100%;
-}
-
-#content_lc:hover .rect-anim {
-    width: 100%;
+    height: 100%;
 }
 
 
