--- a/refactor2/styles.css
+++ b/refactor2/styles.css
@@ -12,9 +12,12 @@ body {
     align-items: stretch;
 
 }
-#content_lc, #content_fc, #content_ba, #content_ea, #content_un {
+#content_lc, #content_fc, #content_ba, #content_ea, #content_un header footer {
     min-height: 100vh;
     box-sizing: border-box;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     margin: 0;
     padding: 3%;
 }
@@ -32,16 +35,16 @@ body {
 
 /* Header-------------------------------------------------------- */
 
-header, footer {
-    box-sizing: border-box;
-}
+
 
 header { 
     background-image: linear-gradient(50deg, black, rgb(17, 19, 17));
     color: #fff;
     text-align: center;
-    min-height: 100vh;
     padding: 3%;
+    align-items: center;
+    justify-content: center;
+    box-sizing: border-box;
 }
 
 .grid-container {
@@ -160,9 +163,7 @@ header {
     z-index: 1; 
 }
 
-.header-nav a[href="#content_lc"]:hover .rect-anim {
-    width: 100%;
-}
+
 
 
 /* Footer-------------------------------------------------------- */
@@ -344,38 +345,27 @@ footer {
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
 .inner-full-size.visible {
     opacity: 1; 
 }
 
 
 
+/* Fact-section--------------------------------------------- */
 
 #content_fc .full-size {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: repeat(4, 1fr);
-    justify-items: center;
+    display: flex;
+    flex-direction: column;
     align-items: center;
+    justify-content: center;
+    box-sizing: border-box;
 }
 
 .fc-grid-item{
-    border: 1px solid black;
-    width: 100%;
-    height: 100%;
+width: 90%;
+background-color: #7d0dff;
+border: 1px solid #000000;
+min-height: 20vh;
 }
 
 
