--- a/refactor2/styles.css
+++ b/refactor2/styles.css
@@ -12,8 +12,10 @@ body {
     align-items: stretch;
 
 }
-#content_lc, #content_fc, #content_ba, #content_ea, #content_un header footer {
-    min-height: 100vh;
+#content_lc, #content_fc, #content_ba, #content_ea, #content_un {
+    min-height: 800px; 
+    height: 100vh;
+    max-height: 1080px; 
     box-sizing: border-box;
     margin: 0;
     padding: 3%;
@@ -21,14 +23,14 @@ body {
 
 .full-size {
     position: relative;
-    min-height: 90vh;
+    min-height: 700px; /* Adjust based on your needs */
+    height: 90vh;
+    max-height: 972px; /* 90% of 1080px */
     overflow: hidden;
     display: flex;
     align-items: center;
-    justify-content: center;  
-    
+    justify-content: center;
 }
-
 
 /* Header-------------------------------------------------------- */
 
@@ -55,7 +57,7 @@ header {
     font-family: "Host Grotesk", sans-serif;
     font-optical-sizing: auto;
     font-weight: 300;
-    letter-spacing: 5px;
+    letter-spacing: 0.3125rem;
     align-self: flex-end;
 }
 
@@ -72,8 +74,8 @@ header {
     justify-content: center;
     align-items: end;
     font-family: "Afacad Flux", sans-serif; 
-    font-size: 20px;
-    padding-bottom: 20px;
+    font-size: 1.25rem;
+    padding-bottom: 1.25rem;
 }
 
 
@@ -90,7 +92,7 @@ header {
 
 .header-nav {
     display: flex;
-    gap: 10px;
+    gap: 0.625rem;
     width: 100%; 
     justify-content: space-between; 
     padding: 0; 
@@ -101,7 +103,7 @@ header {
     color: white;
     text-decoration: none;
     background-color: rgba(0, 0, 0, 0);
-    border-radius: 5px;
+    border-radius: 0.3125rem;
     position: relative; 
 }
 
@@ -114,17 +116,17 @@ header {
     content: '';
     display: block;
     width: 0;
-    height: 10px;
+    height: 0.625rem;
     background: linear-gradient(270deg, #0dffc0, #0dff21, #d9ff0d, #ffcf0d, #ff840d, #7d0dff, #ff0d56);
     background-size: 1400% 1400%;
     -webkit-animation: AnimationGradient 20s ease infinite;
     -moz-animation: AnimationGradient 20s ease infinite;
     animation: AnimationGradient 20s ease infinite;
     transition: width 0.5s ease-in;
-    border-radius: 20px;
-    margin-top: 5px;
+    border-radius: 1.25rem;
+    margin-top: 0.3125rem;
     position: absolute;
-    bottom: -15px; 
+    bottom: -0.9375rem; 
     left: 0;
 }
 
@@ -151,11 +153,11 @@ header {
 .rect-anim {
     display: block; 
     width: 0;
-    height: 10px; 
+    height: 0.625rem; 
     color: white; 
     transition: width 0.5s ease-in; 
-    border-radius: 20px;
-    margin-top: 5px; 
+    border-radius: 1.25rem;
+    margin-top: 0.3125rem; 
     position: relative; 
     z-index: 1; 
 }
@@ -163,13 +165,64 @@ header {
 
 
 
+
 /* Footer-------------------------------------------------------- */
 footer {
-    background-color: #333;
+    background: linear-gradient(270deg, #0d9e77, #09ac16, #97af0d, #a3850a, #ff840d, #7d0dff, #ff0d56);
+    background-size: 1400% 1400%;
+    -webkit-animation: AnimationGradient 60s ease infinite;
+    -moz-animation: AnimationGradient 60s ease infinite;
+    animation: AnimationGradient 60s ease infinite;
     color: #fff;
-    text-align: center;
-    padding: 10px 0;
-    height: 50vh;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: 1fr;
+    gap: 2rem;
+    padding: 2rem;
+    padding-top: 3rem;
+    min-height: 19rem;
+}
+.footer-column img{
+    width: 5rem;
+    height: auto;
+    object-fit: cover;
+    border-radius: 0.625rem;
+    -webkit-filter: drop-shadow(5px 5px 20px #e7e7e7b4);
+    filter: drop-shadow(5px 5px 20px #c7c7c7bb);
+}
+
+.footer-column {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.footer-column h3 {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.3rem;
+    font-weight: 300;
+    letter-spacing: 0.1rem;
+    margin: 0;
+    padding-bottom: 3.5rem;
+}
+
+.footer-column p {
+    font-family: "Afacad Flux", sans-serif;
+    font-size: 1.1rem;
+    line-height: 1.5;
+    margin: 0;
+}
+
+.author{
+    letter-spacing: 0.3rem;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.f-links{
+    text-decoration: none;
+    color: white;
+}
+.f-links:hover{
+    text-decoration: underline;
 }
 
 
@@ -215,7 +268,7 @@ footer {
 
 
 .lc-grid-item {
-    padding: 5px 0; 
+    padding: 0.3125rem 0; 
     max-width: 100%;
     font-size: 1.1rem;
     font-weight: 300;
@@ -229,24 +282,26 @@ footer {
 
 .lc-grid-item h1 {
     font-family: Arial, Helvetica, sans-serif;
-    font-size: clamp(3rem, 0.135rem + 3.846vi, 4.75rem);
+    font-size: 5rem;
     padding: 0;
     margin: 0;
     font-weight: 300;
-    letter-spacing: 3px;
+    letter-spacing: 0.1875rem;
     /* max-width: 1000px; */
 }
 
 .lc-grid-item p.second-row {
     margin: 0;
-    max-width: 1000px;
+    max-width: 65rem;
+    font-size: 1.1rem;
+    font-weight: 400;
 }
 
 .lc-grid-item .inner-grid {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: 1fr;
-    gap: 20px; 
+    gap: 1.25rem; 
     max-width: 100%;
 }
 
@@ -262,11 +317,11 @@ footer {
 
 .lc-desc-cell {
     width: 100%;
-    height: 190px; 
+    height: 12rem; 
     padding: 0;
     
-    border-radius: 5px;
-    margin-top: 10px;
+    border-radius: 0.31rem;
+    margin-top: 0.625rem;
     box-sizing: border-box;
     position: relative;
     overflow: hidden;
@@ -277,7 +332,7 @@ footer {
 
 .lc-desc-h2 {
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 1.3rem;
+    font-size: 1.5rem;
     font-weight: 300;
     letter-spacing: 0.2rem;
     margin: 0;
@@ -291,7 +346,7 @@ footer {
     font-size: 1rem;
     line-height: 1.5rem;
     margin: 0;
-    font-weight: 300;
+    font-weight: 400;
     
     padding-bottom: 0.7rem;
 }
@@ -300,13 +355,13 @@ footer {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 10px;
-    padding: 10px;
-    padding-bottom: 15px;
+    gap: 0.625rem;
+    padding: 0.625rem;
+    padding-bottom: 0.93rem;
     padding-left:  0px;
     padding-right: 0;
     background-color: rgba(255, 255, 255, 0);
-    border-radius: 10px;
+    border-radius: 0.625rem;
     /* -webkit-box-shadow: 0px 13px 27px -21px rgba(0,0,0,0.61);
     -moz-box-shadow: 0px 13px 27px -21px rgba(0,0,0,0.61);
     box-shadow: 0px 13px 27px -21px rgba(0,0,0,0.61); */
@@ -318,7 +373,7 @@ footer {
     content: '';
     display: block;
     width: 100%;
-    height: 5px;
+    height: 0.3125rem;
     background: linear-gradient(270deg, #0dffc0, #0dff21, #d9ff0d, #ffcf0d, #ff840d, #7d0dff, #ff0d56);
     background-size: 1400% 1400%;
     -webkit-animation: AnimationGradient 20s ease infinite;
@@ -327,7 +382,7 @@ footer {
     position: absolute;
     bottom: 0;
     left: 0;
-    border-radius: 0 0 10px 10px;
+    border-radius: 0 0 0.625rem 0.625rem;
 }
 
 .inner-full-size {
@@ -335,7 +390,9 @@ footer {
     top: 0;
     left: 0;
     width: 100%;
-    min-height: 100%;
+    min-height: 700px;
+    height: 100%;
+    max-height: 972px;
     opacity: 0; 
     transition: opacity 2s ease-in; 
     
@@ -366,7 +423,10 @@ footer {
     width: 90%;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
-    letter-spacing: 0.8rem;
+    font-size: 1.1rem;
+    
+    letter-spacing: 1.5rem;
+    font-weight: 300;
     
 }
 
@@ -381,20 +441,21 @@ footer {
     font-family: "Afacad Flux", sans-serif; 
 
 }
-.fc-grid-item .fc-head-text{
-    font-size: 1rem;
-}
+
 .fc-grid-item .fact-text{
-    font-size: 1.5rem;
+    
     padding: 0;
     margin: 0;
-    font-weight: 30;
+    font-size: 1.5rem;
+    line-height: 1.6;
+    font-weight: 300;
     text-align: left;
 }
  /* Buttefly Anatomy Content_ba--------------------------------------------------- */
 
 #content_ba{
-    background-color: #ff0d56;
+    /* 
+     */
 }
 #content_ba .full-size{
     display: grid;
@@ -407,7 +468,7 @@ footer {
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    gap: 20px;
+    gap: 1.25rem;
     height: 100%;
     /* flex-grow: 1; */
 }
@@ -419,10 +480,10 @@ footer {
 }
 .ba-grid-item img{
 
-    width: 70%;
+    width: 55%;
     height: auto;
-    object-fit: fill;
-    border-radius: 10px;
+    object-fit: contain;
+    border-radius: 0.625rem;
 
     -webkit-filter: drop-shadow(5px 5px 20px #e7e7e7);
     filter: drop-shadow(5px 5px 20px #c7c7c7);
@@ -430,16 +491,331 @@ footer {
 
 .x-ray-img{
     position: absolute;
-    
-
+    clip-path: inset(0 0 0 0);
+    transition: clip-path 0.1s ease;
 }
+
 .color-img{
-    clip-path: inset(0 50% 0 0);
-    transition: clip-path 0.5s;
+    clip-path: inset(0 100% 0 0);
+    transition: clip-path 0.1s ease;
+}
+
+.slider-container {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+}
+slider-container span{
+    font-size: 1.5rem;
+    font-weight: 300;
+    color: #000000;
+    padding: 0;
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+    text-shadow: 0.125rem 0.125rem #558abb2d;
+}
+
+.slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 1.5625rem;
+    height: 1.5625rem;
+    border-radius: 1.5625rem;
+    background: #000000;
+    cursor: pointer;
+    /* box-shadow: 2px 0px 15px rgba(0, 0, 0, 0.493); */
+    
+  }
+
+
+  
+  .slider {
+    -webkit-appearance: none;
+    width: 55%;
+    height: 0.4375rem;
+    background: linear-gradient(270deg, #0dffc0, #0dff21, #d9ff0d, #ffcf0d, #ff840d, #7d0dff, #ff0d56);
+    background-size: 1400% 1400%;
+    -webkit-animation: AnimationGradient 20s ease infinite;
+    -moz-animation: AnimationGradient 30s ease infinite;
+    animation: AnimationGradient 20s ease infinite;
+    outline: none;
+    opacity: 1;
+    border-radius: 1.5625rem;;
+
+  }
+  .bubble-desc{
+    flex: none;
+    position:absolute;
+    z-index: 20;
+    background-color: rgba(255, 255, 255, 0);
+    width: 18.75rem;
+    height: 8.5rem;
+    padding: 2rem;
+      
+    opacity: 0;
+    transition: opacity 0.5s ease;
+  }
+  .bubble-left{
+    
+    flex: none;
+    position: absolute;
+    width: 25rem;
+    height: 20rem;
+    z-index: 25;
+    left: 2%;
+
+    /* background-color: rgba(255, 255, 255, 0.9); */
+    padding: 2rem;
+    border-radius: 0.9375rem;
+    /* box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); */
+    opacity: 0;
+    transition: opacity 0.3s ease;
+  }
+
+  .bubble-desc::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: inherit;
+    filter: blur(1.5rem);
+    z-index: -1;
+    background-color: #ffffffb4;
+  }
+
+  .bubble-desc:hover{
+    opacity: 1;
+
+    
+  }
+
+
+
+.bubble-left.visible {
+    opacity: 1;
+}
+
+.bubble-left h2 {
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
+    font-family: Arial, Helvetica, sans-serif;
+    letter-spacing: 0.2rem;
+    font-weight: 300;
+}
+
+.bubble-left p {
+    font-family: "Afacad Flux", sans-serif;
+    font-size: 1.1rem;
+    line-height: 1.6;
+}
+
+  /* Top right */
+  .bubble-desc:nth-child(1){
+    top: 5rem;
+    right: 15%;         
+  }
+  /* Top Left */
+  .bubble-desc:nth-child(2){
+    top: 5rem;
+    left: 18%;     
+  }
+  /*Top Center  */
+  .bubble-desc:nth-child(3){
+    top: 1.2rem; 
+    left: 41%; 
+  }
+  /* Bottom Left */
+  .bubble-desc:nth-child(4){
+    bottom: 2rem;
+    left: 30%;   
+  }
+  /* Bottom Right */
+  .bubble-desc:nth-child(5){
+    bottom: 3rem;
+    right: 46%;
+    width: 5rem;
+  }
+
+    .bubble-desc h2{
+        font-size: 1.2rem;
+        font-weight: 200;
+        letter-spacing: 0.2rem;
+        text-align: left;
+        padding: 0;
+        margin: 0;
+        font-family: Arial, Helvetica, sans-serif;
+        padding-bottom: 0.3rem;
+        text-shadow: 3px 3px #558abb2d;
+       
+    }
+
+    .bubble-desc p{
+        font-size: 1rem;
+        font-weight: 400;
+        text-align: left;
+        padding: 0;
+        margin: 0;
+        font-family: "Afacad Flux", sans-serif; 
+        
+        
+
+    }
+
+/* Content_EA eco-impact-------------------------------------- */
+
+.ea-grid-container {
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: 1fr;
+    height: 100%;
+    min-width: 100%;
+    gap: 5rem;
+}
+
+.ea-grid-item {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    /* padding: 20px; */
+    font-family: "Afacad Flux", sans-serif;
+    width: 100%;
 }
 
 
- /* Animation & Other */
+.ea-grid-item h1 {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 2rem;
+    font-weight: 300;
+    letter-spacing: 0.3rem;
+    padding: 0%;
+    margin-bottom: 0;
+}
+
+.ea-grid-item p {
+    font-size: 1.5rem;
+    line-height: 1.6;
+    font-weight: 300;
+
+}
+.image-carousel {
+    width: 100%;
+    overflow: hidden;
+    position: relative;
+    
+}
+
+.carousel-track {
+    display: flex;
+    gap: 20px;
+    position: relative;
+    width: fit-content;
+    animation: slideShow 30s linear infinite;
+}
+
+.carousel-track img {
+    height: 300px;
+    width: auto;
+    object-fit: cover;
+    /* border-radius: 10px; */
+    flex-shrink: 0;
+    
+    
+}
+
+@keyframes slideShow {
+    0% {
+        transform: translateX(0);
+    }
+    100% {
+        transform: translateX(-50%); 
+    }
+}
+
+
+
+.ea-grid-item:nth-child(2) {
+    position: relative;
+    padding-bottom: 20px;
+}
+
+.ea-grid-item:nth-child(2)::after {
+    content: '';
+    display: block;
+    width: 100%;
+    height: 5px;
+    background: linear-gradient(270deg, #0dffc0, #0dff21, #d9ff0d, #ffcf0d, #ff840d, #7d0dff, #ff0d56);
+    background-size: 1400% 1400%;
+    -webkit-animation: AnimationGradient 20s ease infinite;
+    -moz-animation: AnimationGradient 20s ease infinite;
+    animation: AnimationGradient 20s ease infinite;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    border-radius: 0 0 10px 10px;
+}
+
+/* Content_UN Monarch Migration--------------------- */
+#birds{
+    width: 100%;
+    height: 800px; /* Fixed height instead of 100vh */
+    position: relative;
+    z-index: 1;
+}
+
+
+.un-content{
+    display: flex;
+    justify-content: center;
+    align-items: center;  
+    z-index: 20;
+    position: absolute;
+    flex-direction: column;
+
+    width: 100%;
+    height: 100vh;
+    backdrop-filter: blur(1px);
+    
+    }
+#content_un .full-size h1 { 
+    font-family: Arial, Helvetica, sans-serif;
+    z-index: 20;
+    font-size: 2rem;
+    font-weight: 400;
+    letter-spacing: 2rem; 
+    background-color: rgba(255, 255, 255, 0.397);
+    box-shadow: 0 0 1rem rgba(255, 255, 255, 0.3),
+                0 0 2rem rgba(255, 255, 255, 0.2),
+                0 0 3rem rgba(255, 255, 255, 0.1);
+    padding: 2rem;
+    border-radius: 0.5rem;
+}
+
+#content_un .full-size p{
+    font-family: "Afacad Flux", sans-serif;
+    width: 80%;
+    font-size: 1.5rem;
+    line-height: 1.6;
+    font-weight: 300;
+    position: relative;
+    background-color: rgba(255, 255, 255, 0.397);
+    box-shadow: 0 0 1rem rgba(255, 255, 255, 0.3),
+                0 0 2rem rgba(255, 255, 255, 0.2),
+                0 0 3rem rgba(255, 255, 255, 0.1);
+    padding: 2rem;
+    border-radius: 0.5rem;
+    
+    
+    
+                 
+}
+
+/* Animation & Other ------------------------------*/
 
 .anim-gradient {
     background: linear-gradient(270deg, #0dffc0, #0dff21, #d9ff0d, #ffcf0d, #ff840d, #7d0dff, #ff0d56);
@@ -468,16 +844,17 @@ footer {
 
 
 
+
 .scroll-arrow {
-    position: absolute;
-    bottom: -98%;
-    left: 49%;
+    display: flex;
+justify-content: center;
+align-items: center;
     transform: translateX(-50%);
-    width: 25px; 
-    height: 25px; 
+    width: 1.5rem; 
+    height: 1.5rem; 
     cursor: pointer;
     border: solid black;
-    border-width: 0 3px 3px 0; 
+    border-width: 0 0.1875rem 0.1875rem 0; 
     display: inline-block;
     padding: 3px;
     transform: rotate(45deg);
@@ -504,79 +881,94 @@ footer {
 
 /* mobile devices -----------------------------------------------*/
 
-@media (min-width: 360px) and (max-width: 480px) {
-    .inner-full-size {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
+@media (max-width: 768px){
+    html{
+        font-size: 14px;
+    }
+    header{
+        width: 100vw;
+    }
+    .inner-full-size{
+        display: inline;
+        width: 100%;
     }
 
-    .header-nav {
+    .grid-container{
+        display: flex;
         flex-direction: column;
+        justify-content: space-between;
+        min-height: 90vh;
+    }
+    .h-grid-item1{
+        align-self: center;
+        font-size: 2rem;
+        line-height: 2rem;
+        padding-top: 3rem;
+    }
+    .big-heading{
+        font-size: 4rem;
+        line-height: 4rem;
+        
+    }
+    .h-grid-item2{
+        height: 45vh;
+        padding-bottom: 50px;
+    }
+    .header-nav{
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
     }
     .header-nav a {
-        max-width: 100%;
-        font-size: larger;
+        font-size: 0.9rem;
+        padding: 0.2rem;
+
+        background-size: 1400% 1400%;
+
+        border-radius: 25px;
+        color: white;
+        font-weight: 600;
+        letter-spacing: 1px;
         
-        backdrop-filter: blur(50px); 
     }
+
     .header-nav a::after{
         display: none;
     }
-
-    .header-nav a:nth-child(1),
-    .header-nav a:nth-child(2),
-    .header-nav a:nth-child(3),
-    .header-nav a:nth-child(4),
-    .header-nav a:nth-child(5) {
+    .header-nav a:nth-child(1){
         text-align: center;
-        padding: 3px 0;
-        /* border: #ffffff 1px solid; */
-        
     }
+    .header-nav a:nth-child(2){
+        text-align: center;
+    }
+    .header-nav a:nth-child(4){
+        text-align: center;
+    }
+    .header-nav a:nth-child(5){
+        text-align: center;
+    }
+    .rect-anim{
+        display: none;
+    }
+    .inner-grid {
+        display: flex;
+        overflow-x: auto;
+        -webkit-overflow-scrolling: touch;
+    }
+    .inner-grid .lc-video-desc-container{
+        width: 94vw;
+    }
+    .lc-grid-item .lc-heading{
+        font-size: 3rem;
+    }
+  .fc-grid-item{
+    max-width: 94%;
+ 
+  }
+}
 
-    .h-grid-item1{
-        
-        font-size: 10vw;
-        align-self: center; 
-    }
-    .h-grid-item3{
-        width: 100vw;
-    }
+@media(max-width:480px){
 
-    .big-heading{
-        font-size: 15vw;
-    }
-
-    .head_video {
-        position: relative;
-        top: -20%;
-        width: 200%; 
-        height: auto; 
-    }
-
-    #content_lc .lc-grid-container {
-        grid-template-rows: auto auto 1fr; 
-    }
-
-    @-webkit-keyframes gradientAnimation {
-        0% { background-position: 0% 50%; }
-        50% { background-position: 100% 50%; }
-        100% { background-position: 0% 50%; }
-    }
-
-    @-moz-keyframes gradientAnimation {
-        0% { background-position: 0% 50%; }
-        50% { background-position: 100% 50%; }
-        100% { background-position: 0% 50%; }
-    }
-
-    @keyframes gradientAnimation {
-        0% { background-position: 0% 50%; }
-        50% { background-position: 100% 50%; }
-        100% { background-position: 0% 50%; }
-    }
 }
 
 .sub-heading {
@@ -584,5 +976,8 @@ footer {
     font-weight: 400;
     margin: 0;
 }
+
+
+
 
 
