--- a/refactor2/styles.css
+++ b/refactor2/styles.css
@@ -312,7 +312,7 @@ footer {
 }
 
 .inner-grid{
-    border-spacing: border-box;
+    box-sizing: border-box;
 }
 
 .lc-desc-cell {
@@ -325,10 +325,13 @@ footer {
     box-sizing: border-box;
     position: relative;
     overflow: hidden;
-    
+    opacity: 0;
+    transition: opacity 0.5s ease-in-out;
 }
 
-
+.lc-video-desc-container:hover .lc-desc-cell {
+    opacity: 1;
+}
 
 .lc-desc-h2 {
     font-family: Arial, Helvetica, sans-serif;
@@ -383,6 +386,12 @@ footer {
     bottom: 0;
     left: 0;
     border-radius: 0 0 0.625rem 0.625rem;
+    opacity: 0;
+    transition: opacity 0.5s ease-in-out;
+}
+
+.lc-video-desc-container:hover::after {
+    opacity: 1;
 }
 
 .inner-full-size {
@@ -509,15 +518,7 @@ footer {
     justify-content: center;
     flex-direction: row;
 }
-slider-container span{
-    font-size: 1.5rem;
-    font-weight: 300;
-    color: #000000;
-    padding: 0;
-    margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
-    text-shadow: 0.125rem 0.125rem #558abb2d;
-}
+
 
 .slider::-webkit-slider-thumb {
     -webkit-appearance: none;
@@ -844,14 +845,17 @@ slider-container span{
 
 
 
-
-.scroll-arrow {
+.center{
     display: flex;
-justify-content: center;
-align-items: center;
+    justify-content: center;
+    align-items: center;
+    padding-top: 10px;
+}
+.scroll-arrow {
+
     transform: translateX(-50%);
-    width: 1.5rem; 
-    height: 1.5rem; 
+    width: 0.6rem; 
+    height: 0.6rem; 
     cursor: pointer;
     border: solid black;
     border-width: 0 0.1875rem 0.1875rem 0; 
@@ -965,6 +969,22 @@ align-items: center;
     max-width: 94%;
  
   }
+
+    /* Make .lc-desc-cell always visible */
+    .lc-desc-cell {
+        opacity: 1;
+    }
+
+    
+    .lc-video-desc-container::after {
+        opacity: 1;
+    }
+
+   
+    .lc-video-desc-container:hover .lc-desc-cell,
+    .lc-video-desc-container:hover::after {
+        transition: none;
+    }
 }
 
 @media(max-width:480px){
